--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,31 +3,54 @@
 # La configuration de location utilise un script PHP pour traiter les requêtes PHP
 # et les rediriger vers un serveur PHP-FPM nommé "wordpress" sur le port 9000.
 
-server 
-{
-	#SSL/TLS Configuration
-	listen 443 ssl;
-	listen [::]:443 ssl;
-	ssl_protocols TLSv1.2;
-	ssl_certificate /etc/ssl/certs/nginx.crt;
-	ssl_certificate_key /etc/ssl/private/nginx.key;
+# server 
+# {
+# 	#SSL/TLS Configuration
+# 	listen 443 ssl;
+# 	listen [::]:443 ssl;
+# 	ssl_protocols TLSv1.2;
+# 	ssl_certificate /etc/ssl/certs/nginx.crt;
+# 	ssl_certificate_key /etc/ssl/private/nginx.key;
 
-	#root and index and server_name
-	root /var/www/wordpress;
-	server_name jguigli.42.fr;
-	index index.php index.html index.htm;
+# 	#root and index and server_name
+# 	root /var/www/wordpress;
+# 	server_name jguigli.42.fr;
+# 	index index.php index.html index.htm;
 
-	location / 
-	{
-		try_files $uri $uri/ =404;
-		index		index.php index.html;
-	}
+# 	location / 
+# 	{
+# 		try_files $uri $uri/ =404;
+# 		index		index.php index.html;
+# 	}
 
-	location ~ \.php$ { 
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass wordpress:9000;
-		fastcgi_index index.php;
-		include fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	}
-}
+# 	location ~ \.php$ { 
+# 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+# 		fastcgi_pass wordpress:9000;
+# 		fastcgi_index index.php;
+# 		include fastcgi_params;
+# 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+# 	}
+# }
+
+# server {
+#     # Configuration for phpMyAdmin on port 8080
+#     listen 8080 ssl;
+# 	listen [::]:8080 ssl;
+# 	ssl_protocols TLSv1.2;
+# 	ssl_certificate /etc/ssl/certs/nginx.crt;
+# 	ssl_certificate_key /etc/ssl/private/nginx.key;
+
+#     server_name jguigli.42.fr;
+
+#     location /phpmyadmin {
+#         alias /usr/share/phpmyadmin;
+#         index index.php index.html index.htm;
+#         try_files $uri $uri/ =404;
+
+#         location ~ \.php$ {
+#             fastcgi_pass phpmyadmin:9000;
+#             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#             include fastcgi_params;
+#         }
+#     }
+# }
