saut de ligne README, modif nginx conf et docker compose yml

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -90,8 +90,8 @@ services:
     depends_on:
       - mariadb
       - wordpress
-    ports:      
-      - 8080:8080
+    # ports:      
+      # - 8080:8080
       # - 8181:443
     env_file : .env
     networks:
