--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,6 +3,49 @@
 # La configuration de location utilise un script PHP pour traiter les requêtes PHP
 # et les rediriger vers un serveur PHP-FPM nommé "wordpress" sur le port 9000.
 
+# server {
+#     listen 80;
+#     server_name jguigli.42.fr www.jguigli.42.fr;
+
+#     location / {
+#         return 301 https://$host$request_uri;
+#     }
+# }
+
+# server 
+# {
+# 	#SSL/TLS Configuration
+# 	listen 443 ssl;
+# 	listen [::]:443 ssl;
+# 	server_name jguigli.42.fr www.jguigli.42.fr;
+
+# 	ssl_protocols TLSv1.2;
+# 	ssl_certificate /etc/ssl/certs/nginx.crt;
+# 	ssl_certificate_key /etc/ssl/private/nginx.key;
+
+# 	#root and index and server_name
+
+# 	location /
+# 	{
+# 		proxy_pass http://wordpress:9000;
+# 		root /var/www/wordpress;
+# 		index index.php index.html index.htm;
+# 		try_files $uri $uri/ =404;
+# 		index index.php index.html;
+
+# 		location ~ \.php$ { 
+# 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+# 			fastcgi_pass wordpress:9000;
+# 			fastcgi_index index.php;
+# 			include fastcgi_params;
+# 			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+# 		}
+# 	}
+
+
+    
+# }
+
 server 
 {
 	#SSL/TLS Configuration
@@ -30,25 +73,21 @@ server
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	}
-}
 
-server {
-    # Configuration for phpMyAdmin on port 8080
-    listen 8080 ssl;
-	listen [::]:8080 ssl;
-	ssl_protocols TLSv1.2;
-	ssl_certificate /etc/ssl/certs/nginx.crt;
-	ssl_certificate_key /etc/ssl/private/nginx.key;
-
-    location /phpmyadmin {
-        alias /usr/share/phpmyadmin;
+	location /phpmyadmin
+	{
+		proxy_pass http://phpmyadmin:80;
+		root /usr/share/;
+        # alias /usr/share/phpmyadmin;
         index index.php index.html index.htm;
         try_files $uri $uri/ =404;
 
         location ~ \.php$ {
-            fastcgi_pass phpmyadmin:8080;
+			include snippets/fastcgi-php.conf;
+            fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
         }
     }
 }
+
