ajout wp-config via dockerfile, phpmyadmin marche avec nginx

--- a/srcs/.env
+++ b/srcs/.env
@@ -9,6 +9,8 @@ WORDPRESS_USER_LOGIN=wpuser
 WORDPRESS_USER_PASSWORD=wpuser
 WORDPRESS_USER_EMAIL=wpuser@gmail.com
 
+PMA_ARBITRARY=1
 PMA_HOST=mariadb
+PMA_PORT=3306
 PMA_USER=wordpress
 PMA_PASSWORD=wordpress
