--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,7 +2,19 @@ FROM debian:buster
 
 RUN	apt update -y && apt upgrade -y && apt install -y \
 	mariadb-server \
-	procps
+	procps \
+	openssl
+
+# SSL
+RUN openssl req -x509 -newkey rsa:2048 -sha256 -days 3650 -nodes -keyout /etc/ssl/server-key.pem -out /etc/ssl/server-cert.pem -subj "/C=FR/ST=IDF/L=PARIS/O=42/OU=42/CN=jguigli.42.fr"
+
+RUN chmod 600 /etc/ssl/server-key.pem \
+	&& chmod 600 /etc/ssl/server-cert.pem
+
+# RUN echo "[mysqld]" >> /etc/mysql/my.cnf
+# RUN echo "ssl-ca=/etc/ssl/server-cert.pem" >> /etc/mysql/my.cnf
+# RUN echo "ssl-cert=/etc/ssl/server-cert.pem" >> /etc/mysql/my.cnf
+# RUN echo "ssl-key=/etc/ssl/server-key.pem" >> /etc/mysql/my.cnf
 
 # indique qu'une vérification de la santé est en cours d'exécution démarrant après un délai de 5 minutes
 HEALTHCHECK --start-period=5m \
