--- a/ansible_deployment/deploy.yaml
+++ b/ansible_deployment/deploy.yaml
@@ -3,16 +3,17 @@
   tasks:
     - name: Copy remote file
       copy:
-        src: /srv/myfiles/foo.conf
-        dest: /etc/foo.conf
-        owner: foo
-        group: foo
+        src: ~/Documents/42/cloud-1/srcs
+        dest: ~/cloud-1/
+        owner: jguigli
+        group: jguigli
         mode: 0644
 
     - name: Install Docker and Docker Compose
+      become: yes
       script: install_docker.sh
 
     - name: Launch docker-compose
-      command: make
+      shell: make > /tmp/docker-compose.log 2>&1
       args:
-        chdir: /path/to/project
+        chdir: ~/cloud-1/srcs
