--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,14 +9,16 @@ server
 	#SSL/TLS Configuration
 	listen 443 ssl;
 	listen [::]:443 ssl;
-	ssl_protocols TLSv1.2;
-	ssl_certificate /etc/ssl/certs/nginx.crt;
-	ssl_certificate_key /etc/ssl/private/nginx.key;
 
 	#root and index and server_name
 	root /var/www/wordpress;
 	server_name jguigli.42.fr;
 	index index.php index.html index.htm;
+
+	ssl_protocols TLSv1.2;
+	ssl_certificate /etc/ssl/certs/nginx.crt;
+	ssl_certificate_key /etc/ssl/private/nginx.key;
+
 
 	location /
 	{
@@ -38,5 +40,8 @@ server
 		proxy_set_header X-Forwarded-For $remote_addr;
 		proxy_set_header Host $host;
 		proxy_pass http://phpmyadmin/;
+		proxy_ssl_protocols TLSv1.2;
+		proxy_ssl_certificate /etc/ssl/certs/nginx.crt;
+		proxy_ssl_certificate_key /etc/ssl/private/nginx.key;
 	}
 }
