--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -4,6 +4,7 @@ all:
 	mkdir -p ~/data/mariadb
 	mkdir -p ~/data/wordpress_log
 	mkdir -p ~/data/mariadb_cert
+	mkdir -p ~/data/nginx_cert
 	docker-compose -f ./docker-compose.yml up --build -d
 
 re: clean all
@@ -27,6 +28,7 @@ clean: down
 	docker volume rm -f srcs_wp
 	docker volume rm -f srcs_wp_log
 	docker volume rm -f srcs_mdb_cert
+	docker volume rm -f srcs_ng_cert
 	docker system prune -a -f
 
 .PHONY: all re build down run rerun rebuild clean
