--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,10 +6,10 @@ RUN	apt update -y && apt upgrade -y && apt install -y \
 	openssl
 
 # SSL
-RUN openssl req -x509 -newkey rsa:2048 -sha256 -days 3650 -nodes -keyout /etc/ssl/server-key.pem -out /etc/ssl/server-cert.pem -subj "/C=FR/ST=IDF/L=PARIS/O=42/OU=42/CN=jguigli.42.fr"
+# RUN openssl req -x509 -newkey rsa:2048 -sha256 -days 3650 -nodes -keyout /etc/ssl/server-key.pem -out /etc/ssl/server-cert.pem -subj "/C=FR/ST=IDF/L=PARIS/O=42/OU=42/CN=jguigli.42.fr"
 
-RUN chmod 600 /etc/ssl/server-key.pem \
-	&& chmod 600 /etc/ssl/server-cert.pem
+# RUN chmod 600 /etc/ssl/server-key.pem \
+# 	&& chmod 600 /etc/ssl/server-cert.pem
 
 # RUN echo "[mysqld]" >> /etc/mysql/my.cnf
 # RUN echo "ssl-ca=/etc/ssl/server-cert.pem" >> /etc/mysql/my.cnf
