--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,13 +12,15 @@ server
 
 	#root and index and server_name
 	root /var/www/wordpress;
-	server_name jguigli.42.fr;
+	server_name guinuy.duckdns.org;
 	index index.php index.html index.htm;
 
 	ssl_protocols TLSv1.2;
 	ssl_certificate /etc/ssl/certs/nginx.crt;
 	ssl_certificate_key /etc/ssl/private/nginx.key;
 
+	# ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;  
+	# ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
 
 	location /
 	{
