route pma https://domaine/phpmyadmin avec absolute URL OK, mise en place conteneur certbot, pas fonctionnel en local, deploiement sur le cloud

--- a/srcs/.env
+++ b/srcs/.env
@@ -11,5 +11,4 @@ WORDPRESS_USER_EMAIL=wpuser@gmail.com
 
 PMA_HOST=mariadb
 PMA_PORT=3306
-PMA_USER=wordpress
-PMA_PASSWORD=wordpress
+PMA_ABSOLUTE_URI='https://jguigli.42.fr/phpmyadmin/'
