--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,6 +3,20 @@
 # La configuration de location utilise un script PHP pour traiter les requêtes PHP
 # et les rediriger vers un serveur PHP-FPM nommé "wordpress" sur le port 9000.
 
+server 
+{
+    listen [::]:80;
+    listen 80;
+    server_name jguigli.42.fr;
+
+	location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://jguigli.42.fr$request_uri;
+    }
+}
 
 server 
 {
@@ -11,16 +25,16 @@ server
 	listen [::]:443 ssl;
 
 	#root and index and server_name
+	server_name jguigli.42.fr;
 	root /var/www/wordpress;
-	server_name guinuy.duckdns.org;
 	index index.php index.html index.htm;
 
 	ssl_protocols TLSv1.2;
 	ssl_certificate /etc/ssl/certs/nginx.crt;
 	ssl_certificate_key /etc/ssl/private/nginx.key;
 
-	# ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;  
-	# ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
+	# ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;  
+	# ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
 
 	location /
 	{
@@ -36,14 +50,35 @@ server
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	}
 
-	location ^~ /phpmyadmin/
-	{
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $remote_addr;
-		proxy_set_header Host $host;
-		proxy_pass http://phpmyadmin/;
-		proxy_ssl_protocols TLSv1.2;
-		proxy_ssl_certificate /etc/ssl/certs/nginx.crt;
-		proxy_ssl_certificate_key /etc/ssl/private/nginx.key;
-	}
+	location ^~ /phpmyadmin {
+        proxy_pass http://phpmyadmin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
+
+# server
+# {
+#     listen 443 ssl;
+#     server_name phpmyadmin.42.fr;
+
+#     ssl_protocols TLSv1.2;
+#     ssl_certificate /etc/ssl/certs/nginx.crt;
+#     ssl_certificate_key /etc/ssl/private/nginx.key;
+
+# 	# ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;  
+# 	# ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
+
+#     location / {
+#         proxy_pass http://phpmyadmin/;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     error_log /var/log/nginx/phpmyadmin_error.log;
+#     access_log /var/log/nginx/phpmyadmin_access.log;
+# }
