--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -7,14 +7,14 @@ server
 {
     listen [::]:80;
     listen 80;
-    server_name jguigli.42.fr;
+    server_name guinuy.duckdns.org;
 
 	location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
-        return 301 https://jguigli.42.fr$request_uri;
+        return 301 https://guinuy.duckdns.org$request_uri;
     }
 }
 
@@ -25,7 +25,7 @@ server
 	listen [::]:443 ssl;
 
 	#root and index and server_name
-	server_name jguigli.42.fr;
+	server_name guinuy.duckdns.org;
 	root /var/www/wordpress;
 	index index.php index.html index.htm;
 
@@ -33,8 +33,8 @@ server
 	ssl_certificate /etc/ssl/certs/nginx.crt;
 	ssl_certificate_key /etc/ssl/private/nginx.key;
 
-	# ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;  
-	# ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
+	# ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;  
+	# ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
 
 	location /
 	{
@@ -58,27 +58,3 @@ server
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
-# server
-# {
-#     listen 443 ssl;
-#     server_name phpmyadmin.42.fr;
-
-#     ssl_protocols TLSv1.2;
-#     ssl_certificate /etc/ssl/certs/nginx.crt;
-#     ssl_certificate_key /etc/ssl/private/nginx.key;
-
-# 	# ssl_certificate /etc/letsencrypt/live/$DOMAIN/fullchain.pem;  
-# 	# ssl_certificate_key /etc/letsencrypt/live/$DOMAIN/privkey.pem;
-
-#     location / {
-#         proxy_pass http://phpmyadmin/;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-
-#     error_log /var/log/nginx/phpmyadmin_error.log;
-#     access_log /var/log/nginx/phpmyadmin_access.log;
-# }
