ajout port 80 nginx, remplacement du nom de domaine, certif certbot fonctionnel

--- a/ansible_deployment/deploy.yaml
+++ b/ansible_deployment/deploy.yaml
@@ -28,7 +28,7 @@
 
     - name: Copy remote file
       copy:
-        src: ~/Documents/cloud-1/srcs
+        src: ~/Documents/42/cloud-1/srcs
         dest: ~/cloud-1/
         owner: root
         group: root
