--- a/srcs/.env
+++ b/srcs/.env
@@ -11,4 +11,4 @@ WORDPRESS_USER_EMAIL=wpuser@gmail.com
 
 PMA_HOST=mariadb
 PMA_PORT=3306
-PMA_ABSOLUTE_URI='https://jguigli.42.fr/phpmyadmin/'
+PMA_ABSOLUTE_URI='https://guinuy.duckdns.org/phpmyadmin/'
