--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -4,14 +4,16 @@ all:
 	mkdir -p ~/data/mariadb
 	mkdir -p ~/data/wordpress_log
 	mkdir -p ~/data/nginx_cert
-	mkdir -p ~/data/nginx_conf
 	mkdir -p ~/data/certbot_data
 	docker-compose -f ./docker-compose.yml up --build -d
 
 re: clean all
 
 certbot:
-	docker-compose run --rm certbot certonly --webroot -w /var/www/certbot --agree-tos --no-eff-email --email 'user@guinuy.duckdns.org' --dry-run -d jguigli.42.fr -d www.jguigli.42.fr --rsa-key-size 4096
+	docker-compose run --rm  certbot -v certonly --register-unsafely-without-email --agree-tos --webroot --webroot-path /var/www/certbot/ -d guinuy.duckdns.org
+
+certbot_dry_run:
+	docker-compose run --rm  certbot -v certonly --dry-run --register-unsafely-without-email --agree-tos --webroot --webroot-path /var/www/certbot/ -d guinuy.duckdns.org
 
 certbot_renew:
 	docker compose run --rm certbot renew
@@ -35,7 +37,6 @@ clean: down
 	docker volume rm -f srcs_wp
 	docker volume rm -f srcs_wp_log
 	docker volume rm -f srcs_ng_cert
-	docker volume rm -f srcs_ng_conf
 	docker volume rm -f srcs_cert_data
 	docker system prune -a -f
 
