--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -29,12 +29,12 @@ server
 	root /var/www/wordpress;
 	index index.php index.html index.htm;
 
-	ssl_protocols TLSv1.2;
-	ssl_certificate /etc/ssl/certs/nginx.crt;
-	ssl_certificate_key /etc/ssl/private/nginx.key;
+	# ssl_protocols TLSv1.2;
+	# ssl_certificate /etc/ssl/certs/nginx.crt;
+	# ssl_certificate_key /etc/ssl/private/nginx.key;
 
-	# ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;  
-	# ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;  
+	ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
 
 	location /
 	{
