--- a/ansible_deployment/deploy.yaml
+++ b/ansible_deployment/deploy.yaml
@@ -28,7 +28,7 @@
 
     - name: Copy remote file
       copy:
-        src: ~/Documents/42/cloud-1/srcs
+        src: ~/Documents/cloud-1/srcs
         dest: ~/cloud-1/
         owner: root
         group: root
@@ -38,19 +38,15 @@
       shell: sudo make > /tmp/docker-compose.log 2>&1
       args:
         chdir: ~/cloud-1/srcs
-    
-    - name: Check existence of certificate files
-      hosts: myhosts
-      gather_facts: false
-      tasks:
-        - name: Search for certificate files
-          find:
-            paths: "~/data/nginx_cert/live/guinuy.duckdns.org/"
-            patterns: "fullchain.pem,privkey.pem"
-          register: cert_files
 
-        - name: Run make certbot if files are missing
-          command: "make certbot"
-          when: cert_files.matched == 0
+    - name: Search for certificate files
+      find:
+        paths: "~/data/nginx_cert/live/guinuy.duckdns.org/"
+        patterns:
+          - "fullchain.pem"
+          - "privkey.pem"
+      register: cert_files
 
-
+      - name: Run make certbot if files are missing
+        command: "make certbot"
+        when: cert_files.matched == 0
