--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,8 +1,3 @@
-# Cette configuration configure une écoute sur le port 443 en utilisant un certificat SSL
-# et configure la racine du site web pour être située à /var/www/wordpress.
-# La configuration de location utilise un script PHP pour traiter les requêtes PHP
-# et les rediriger vers un serveur PHP-FPM nommé "wordpress" sur le port 9000.
-
 server 
 {
     listen [::]:80;
@@ -20,21 +15,16 @@ server
 
 server 
 {
-	#SSL/TLS Configuration
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
-	#root and index and server_name
 	server_name guinuy.duckdns.org;
 	root /var/www/wordpress;
 	index index.php index.html index.htm;
 
-	# ssl_protocols TLSv1.2;
-	# ssl_certificate /etc/ssl/certs/nginx.crt;
-	# ssl_certificate_key /etc/ssl/private/nginx.key;
-
-	ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;  
-	ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
+	#ssl_protocols TLSv1.2;
+	#ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;  
+	#ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
 
 	location /
 	{
@@ -50,11 +40,14 @@ server
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	}
 
-	location ^~ /phpmyadmin {
+	location ^~ /phpmyadmin/ {
         proxy_pass http://phpmyadmin/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+		#proxy_ssl_protocols TLSv1.2;
+		#proxy_ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;
+		#proxy_ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
     }
 }
