--- a/srcs/.env
+++ b/srcs/.env
@@ -11,4 +11,7 @@ WORDPRESS_USER_EMAIL=wpuser@gmail.com
 
 PMA_HOST=mariadb
 PMA_PORT=3306
-PMA_ABSOLUTE_URI='https://guinuy.duckdns.org/phpmyadmin/'
+PMA_ABSOLUTE_URI='https://${DOMAIN_NAME}/phpmyadmin/'
+
+DIR_PATH=''
+DOMAIN_NAME='gui-nuy.duckdns.org'
