--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,14 +2,14 @@ server
 {
     listen [::]:80;
     listen 80;
-    server_name guinuy.duckdns.org;
+    server_name ${DOMAIN_NAME};
 
 	location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
     location / {
-        return 301 https://guinuy.duckdns.org$request_uri;
+        return 301 https://${DOMAIN_NAME}$request_uri;
     }
 }
 
@@ -18,13 +18,13 @@ server
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
-	server_name guinuy.duckdns.org;
+	server_name ${DOMAIN_NAME};
 	root /var/www/wordpress;
 	index index.php index.html index.htm;
 
 	#ssl_protocols TLSv1.2;
-	#ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;  
-	#ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
+	#ssl_certificate /etc/letsencrypt/live/${DOMAIN_NAME}/fullchain.pem;  
+	#ssl_certificate_key /etc/letsencrypt/live/${DOMAIN_NAME}/privkey.pem;
 
 	location /
 	{
@@ -47,7 +47,7 @@ server
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 		#proxy_ssl_protocols TLSv1.2;
-		#proxy_ssl_certificate /etc/letsencrypt/live/guinuy.duckdns.org/fullchain.pem;
-		#proxy_ssl_certificate_key /etc/letsencrypt/live/guinuy.duckdns.org/privkey.pem;
+		#proxy_ssl_certificate /etc/letsencrypt/live/${DOMAIN_NAME}/fullchain.pem;
+		#proxy_ssl_certificate_key /etc/letsencrypt/live/${DOMAIN_NAME}/privkey.pem;
     }
 }
