--- a/ansible_deployment/inventory.ini
+++ b/ansible_deployment/inventory.ini
@@ -1,4 +1,4 @@
 # Specify the IP address or fully qualified domain name (FQDN) of each host system
 
 [myhosts]
-51.159.129.227 ansible_user=root ansible_ssh_private_key_file=~/.ssh/id_rsa
+16.171.0.146 ansible_user=ubuntu ansible_ssh_private_key_file=~/Downloads/cloud_1_key.pem
