--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -18,8 +18,7 @@ server
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
-	server_name ${DOMAIN_NAME};
-	root /var/www/wordpress;
+	server_name ${DOMAIN_NAME}; root /var/www/wordpress;
 	index index.php index.html index.htm;
 
 	#ssl_protocols TLSv1.2;
