Reboot only when docker.io is installed

--- a/ansible_deployment/playbook/system_requirements.yaml
+++ b/ansible_deployment/playbook/system_requirements.yaml
@@ -28,3 +28,4 @@
     - name: Reboot machine
       become: yes
       ansible.builtin.reboot:
+      when: "'docker.io' not in ansible_facts.packages"
