ADD playbook for restart a container

--- a/ansible_deployment/Makefile
+++ b/ansible_deployment/Makefile
@@ -10,10 +10,13 @@ launch_app:
 certbot:
 	ansible-playbook -i inventory.ini playbook/certbot.yaml -e="env=$(DOMAIN_NAME)"
 
-check_container:
-	ansible-playbook -i inventory.ini playbook/docker/check_container.yaml
+check_containers:
+	ansible-playbook -i inventory.ini playbook/docker/check_containers.yaml
+
+restart_container:
+	ansible-playbook -i inventory.ini playbook/docker/restart_container.yaml
 
 clean:
 	ansible-playbook -i inventory.ini playbook/clean.yaml
 
-.PHONY: all copy_file launch_app certbot check_container clean
+.PHONY: all copy_file launch_app certbot check_containers restart_container clean
